<resources>
    <string name="app_name">MEDcenter</string>
    <string name="EnterName">Введите имя</string>
    <string name="users">Users</string>
    <string name="Authorization">Авторизация</string>
    <string name="Polbz">Пользователь:</string>
    <string name="Enter_name">введите имя</string>
    <string name="Password">Пароль:</string>
    <string name="Enter_password">введите пароль</string>
    <string name="Attempts">Попыток:</string>
    <string name="Log_in">Войти</string>
    <string name="Good_log_in">Вы успешно залогинились!</string>
    <string name="Next_page">next_page</string>
    <string name="Enter_specialist">Выберите специалиста</string>
    <string name="Terapevt">Button</string>
    <string name="Okulist">Button</string>
    <string name="Hirurg">Button</string>
    <string name="Endoctinolog">Button</string>
    <string name="string_endoctinolog">qaz</string>
    <string name="Terapeft">Терапевт</string>
    <string name="Endakrinolog">Эндокринолог</string>
    <string name="Akulist">Окулист</string>
    <string name="Xururg">Хирург</string>
    <string name="FIO">Выберите ФИО врача и время:</string>
    <string name="vrach1">Ульянова А.П</string>
    <string name="time1">09:25</string>
    <string name="time2">10:00</string>
    <string name="vrach2">Андреев Д.Н</string>
    <string name="time3">11:35</string>
    <string name="time4">12:00</string>
    <string name="Final">TextView</string>
    <string name="vrach3">Яковлев К.В</string>
    <string name="vrach4">Кушин В.С</string>
    <string name="time6">08:00</string>
    <string name="time8">08:10</string>
    <string name="time7">08:05</string>
    <string name="time5">14:30</string>
    <string name="time0">15:00</string>
    <string name="time9">13:55</string>
    <string name="time10">14:55</string>
    <string name="time11">17:15</string>
    <string name="time12">17:45</string>
    <string name="vrach5">Шнайдер У.Я</string>
    <string name="vrach6">Фраун Я.Ю</string>
    <string name="string_vrach6">Фраун Я.Ю</string>
    <string name="time16">16:45</string>
    <string name="time15">17:20</string>
    <string name="time14">10:35</string>
    <string name="time13">11:00</string>
    <string name="vrach7">Наумов Н.Д</string>
    <string name="vrach8">Антипов А.А</string>
</resources>