<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.medcenter.MainActivity">

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Authorization"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Login"
        android:layout_marginTop="75dp"
        android:layout_marginStart="10dp"
        android:text="@string/Polbz"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_text"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/user_text"
        android:autofillHints="1"
        android:hint="@string/Enter_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_text"
        android:layout_below="@+id/user_text"
        android:layout_marginTop="40dp"
        android:text="@string/Password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_user"
        android:layout_alignEnd="@+id/edit_user"
        android:layout_alignBottom="@+id/password_text"
        android:hint="@string/Enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints="1" />

    <TextView
        android:id="@+id/attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_alignStart="@+id/password_text"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/Attempts"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:onClick="Login"
        android:text="@string/Log_in"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/number_of_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/user_text"
        android:layout_alignTop="@+id/attempts"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_locked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:layout_alignEnd="@+id/edit_password"
        android:layout_alignStart="@+id/attempts" />

</RelativeLayout>